name:                concurrent-dsl
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/adbrowne/concurrent-dsl#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Browne
maintainer:          brownie@brownie.com.au
copyright:           2016 Andrew Browne
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable concurrent-dsl-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , concurrent-dsl
  default-language:    Haskell2010

test-suite concurrent-dsl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , concurrent-dsl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adbrowne/concurrent-dsl
