name:                dodgerblue
version:             0.1.0.0
synopsis:            Library to aid in building a testable DSL with concurrency primitives
description:         Please see README.md
homepage:            https://github.com/adbrowne/dodgerblue#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Browne
maintainer:          brownie@brownie.com.au
copyright:           2016 Andrew Browne
category:            DSL
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DodgerBlue
                     , DodgerBlue.IO
                     , DodgerBlue.Types
  build-depends:       base >= 4.7 && < 5
                     , async
                     , free
                     , QuickCheck
                     , stm
                     , transformers
                     , mtl
  default-language:    Haskell2010

executable dodgerblue-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dodgerblue
  default-language:    Haskell2010

test-suite dodgerblue-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dodgerblue
                     , stm
                     , free
                     , tasty
                     , tasty-quickcheck
                     , tasty-hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adbrowne/dodgerblue
