name:                dodgerblue
version:             0.1.0.0
synopsis:            Library to aid in building a testable DSL with concurrency primitives
description:         Please see README.md
homepage:            https://github.com/adbrowne/dodgerblue#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Browne
maintainer:          brownie@brownie.com.au
copyright:           2016 Andrew Browne
category:            DSL
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DodgerBlue
                     , DodgerBlue.IO
                     , DodgerBlue.Testing
                     , DodgerBlue.Types
  other-modules:       DodgerBlue.InMemoryQueues
  build-depends:       base >= 4.7 && < 5
                     , async
                     , free
                     , containers
                     , QuickCheck
                     , quickcheck-instances
                     , stm
                     , text
                     , lens
                     , transformers
                     , mtl
  default-language:    Haskell2010

executable dodgerblue-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dodgerblue
  default-language:    Haskell2010

test-suite dodgerblue-test
  type:                exitcode-stdio-1.0
  other-modules:       DodgerBlue.MyDslExample
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dodgerblue
                     , containers
                     , QuickCheck
                     , quickcheck-instances
                     , stm
                     , async
                     , lens
                     , mtl
                     , free
                     , text
                     , tasty
                     , tasty-quickcheck
                     , tasty-hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adbrowne/dodgerblue
